<!--
  ~
  ~  Copyright (c) 2020, Spudnik LLc <https://www.spudnik.com/>
  ~  All rights reserved.
  ~
  ~  Redistribution and use in source and binary forms, with or without
  ~  modification, are not permitted in any form.
  ~
  ~  DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ~  ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~  (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION, DEATH, or SERIOUS INJURY or DAMAGE)
  ~  HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~  OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~
  -->

<resources>
    <string name="app_name">Spudnik S4</string>
    <string name="spudniklogo">spudniklogo</string>
    <string name="s4logo">s4logo</string>
    <string name="diagnostic_tool">Diagnostic Tool</string>
    <string name="vdev1_0">vDev1.0</string>
    <string name="todo">TODO</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>

    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="run_diagnostic_tool">Run Diagnostic Tool</string>
    <string name="update_implement_software">Update Implement Software</string>
    <string name="log_implement_io_data">Log Implement Io Data</string>
    <string name="view_tool_settings">View Tool Settings</string>
    <string name="enter_implement_serial_number">Enter Implement Serial Number</string>
    <string name="e_g_6640_55_150">(e.g. 6640–55–150)</string>
    <string name="spudnikplate">spudnikplate</string>
    <string name="which_s4_input_or_output_connector_would_you_like_to_view_diagnostics_for">Which S4 Input or Output connector would you like to view diagnostics for?</string>

    <string name="help">Help</string>
    <string name="entering_pin_test_mode_suspends_normal_machine_operations_and_may_override_machine_safety_features_incorrect_use_of_the_pin_test_mode_could_result_in_personal_injury_death_and_or_equipment_damage">Entering PIN TEST mode suspends normal machine operation and may override machine safety features. Incorrect use of the PIN TEST mode could result in personal injury, death, and or equipment damage</string>
    <string name="danger">DANGER</string>
    <string name="abort">Abort!</string>
    <string name="got_it">Got It!</string>
    <string name="p_analog_input_connector">p Analog Input Connector</string>
    <string name="select_pin_to_view_diagnostics_for">Select Pin to view diagnostics for:</string>
    <string name="please_login">Please Sign In</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="loading_gif">Loading_gif</string>
    <string name="update_database">Update DataBase</string>
    <string name="bluetooth_test">Bluetooth Test</string>
    <string name="report_bug">Report Bug</string>
    <string name="login">Sign In</string>
    <string name="logout">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="where_s_my_serial_number">Where\'s My Serial Number?</string>
    <string name="the_implement_s_serial_number_can_be_found_on_the_front_of_the_machine_it_is_printed_on_an_aluminum_tag_similar_to_the_one_above">The implement\'s serial number can be found on the front of the machine. It is printed on an aluminum tag similar to the one above.</string>
    <string name="remember">Remember</string>
    <string name="decoration">Decoration</string>
    <string name="enter_dealer_or_shop_id">Enter Dealer or Shop Id</string>
    <string name="connector">Connector</string>
    <string name="dealer_id">Dealer Id</string>
    <string name="title_placeholder">title_placeholder</string>
    <string name="subtitle_holder">subtitle_holder</string>
    <string name="warninglabel">warningLabel</string>
    <string name="prev_pin">Prev Pin</string>
    <string name="next_pin">Next Pin</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="_5">+5</string>
    <string name="_1">+1</string>
    <string name="_1plus">-1</string>
    <string name="_5minus">-5</string>
    <string name="pin_6_testholder">PIN 6 TEST</string>
    <string name="PWM_holder">75 PWM</string>
    <string name="title_activity_termsofservice">termsofservice</string>
    <!-- Strings used for fragments for navigation -->

    <string name="terms_and_conditions">Terms and Conditions</string>
</resources>
