<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".75" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".25" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/what_do_you_want_to_do"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2"
            android:drawableLeft="@drawable/tinyheartbeattransparent"
            android:onClick="diagTool"
            android:text="@string/run_diagnostic_tool"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2"
            android:drawableLeft="@drawable/tinygreenarrowtransparent"
            android:onClick="update"
            android:text="@string/update_implement_software"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2"
            android:drawableLeft="@drawable/binarytexttransparent"
            android:onClick="logData"
            android:text="@string/log_implement_io_data"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2"
            android:drawableLeft="@drawable/cogwheeltransparent"
            android:onClick="settings"
            android:text="@string/view_tool_settings"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
