<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText"
        tools:layout_editor_absoluteX="16dp">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".75" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1.5"
            android:contentDescription="@string/spudniklogo"
            app:srcCompat="@drawable/spudniklogo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1.35" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".5"
            android:contentDescription="@string/s4logo"
            app:srcCompat="@drawable/s4redtransparent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/diagnostic_tool"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/vdev1_0"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1" />

        <!--
       <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="3"
            android:contentDescription="@string/heartratepicture"
            app:srcCompat="@drawable/heartratepicturetransparent" />
        -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_gravity="top"
            android:layout_weight=".5"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/redbluetoothtransparent" />

        <ImageView
            android:id="@+id/gifloadingscreen"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="3"
            android:contentDescription="@string/loading_gif" />

        <TextView
            android:id="@+id/loadingText"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/loading_0"
            android:textColor="#FF0000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/loadingbar"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".5"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>