<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~  Copyright (c) 2020, Spudnik LLc <https://www.spudnik.com/>
  ~  All rights reserved.
  ~
  ~  Redistribution and use in source and binary forms, with or without
  ~  modification, are not permitted in any form.
  ~
  ~  DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
  ~  ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
  ~  (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
  ~  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION, DEATH, or SERIOUS INJURY or DAMAGE)
  ~  HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
  ~  OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
  ~  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".warningscreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".75"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:background="@drawable/dangeralertsymbol"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:background="#FF0000"
                android:gravity="center"
                android:text="@string/danger"
                android:textIsSelectable="false"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:backgroundTint="#FF0000"
                android:contentDescription="@string/warninglabel"
                app:srcCompat="@drawable/dangeralertsymbol" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".2"
                android:backgroundTint="#FF0000" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="4"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/entering_pin_test_mode_suspends_normal_machine_operations_and_may_override_machine_safety_features_incorrect_use_of_the_pin_test_mode_could_result_in_personal_injury_death_and_or_equipment_damage"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/warningscreenabortbutton"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/abort"
                android:textStyle="bold"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="accepted"
                android:text="@string/got_it"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".25" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>