<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginconstraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".75" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".25" />

        <TextView
            android:id="@+id/loginpleasejointextview"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".75"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/please_login"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".25" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".5"
            android:hint="@string/first_last_spudnik_com"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/email"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/loginemailedittext"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_gravity="start|center_vertical"
                android:layout_weight=".85"
                android:autofillHints=""
                android:backgroundTint="#FF0000"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColorHighlight="#FF0000"
                android:textColorLink="#FF0000" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".15" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".25" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".5"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/password"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/loginpasswordedittext"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_gravity="start|center_vertical"
                android:layout_weight=".85"
                android:autofillHints=""
                android:backgroundTint="#FF0000"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <Space
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight=".15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".75"
            android:orientation="horizontal">

            <Space
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight=".1" />

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight=".35"
                android:onClick="login"
                android:text="@string/login" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".55" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2.75" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />

            <ImageView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1.25"
                android:contentDescription="@string/spudniklogo"
                app:srcCompat="@drawable/spudniklogo" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight=".25" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>